UI for Hex (Alternative Version)

--- a/example/HexDisplay.scss
+++ b/example/HexDisplay.scss
@@ -1,4 +1,4 @@
-.Hex .graph-container {
+.Hex .graph-container, .Hex-Alternative-Version .graph-container {
 	border-top: 20px solid red;
 	border-bottom: 20px solid red;
 	border-left: 20px solid blue;
