--- a/example/ArithmeticProgressionGameDisplay.scss
+++ b/example/ArithmeticProgressionGameDisplay.scss
@@ -5,7 +5,7 @@
 	justify-content: center;
 	align-items: center;
 
-	> div:not([class]) {
+	> .gameHolder {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
@@ -39,6 +39,10 @@
 					border-bottom: 1px solid #000000;
 				}
 			}
+		}
+
+		&.gameOver > div:not(.highlighted) {
+			filter: grayscale(1);
 		}
 	}
 }
